test/parser/traits/path_fragment_error.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:9: error: expected identifier or 'Self'
  a::b::number::c;
}
